--- a/index.html
+++ b/index.html
@@ -202,21 +202,21 @@
           <div class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <div class="footer__column-links">
-              <a href="#" class="footer__column-link"
+              <a href="#" target="_blank" class="footer__column-link"
                 ><img
                   src="./images/youtube-icon.svg"
                   alt="Ютуб иконка"
                   class="footer__social-icon"
                 />YouTube</a
               >
-              <a href="#" class="footer__column-link"
+              <a href="#" target="_blank" class="footer__column-link"
                 ><img
                   src="./images/vk_color_white.svg"
                   alt="ВКонтакте иконка"
                   class="footer__social-icon"
                 />ВКонтакте</a
               >
-              <a href="#" class="footer__column-link"
+              <a href="#" target="_blank" class="footer__column-link"
                 ><img
                   src="./images/tiktok-icon.svg"
                   alt="ТикТок иконка"
