--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Научиться учиться от Яндекс.Практикум" />
-    <meta name="keywords" content="html, css" />
-    <meta name="author" content="Ксения Дерека" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Научиться учиться от Яндекс.Практикум">
+    <meta name="keywords" content="html, css">
+    <meta name="author" content="Ксения Дерека">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="page/index.css" />
+    <link rel="stylesheet" href="page/index.css">
   </head>
   <body>
     <div class="root">
@@ -16,7 +16,7 @@
           src="./images/logo_place_header.svg"
           alt="логотип Яндекс.Практикум"
           class="logo logo_place_header"
-        />
+        >
         <h1 class="title header__title">Научиться учиться</h1>
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
@@ -27,7 +27,7 @@
           src="./images/header-image.png"
           alt="фрагмент Опять двойка"
           class="header__main-illustration"
-        />
+        >
         <div class="header__square-pic rotation"></div>
       </header>
       <main class="content">
@@ -64,7 +64,7 @@
                 class="cards__image"
                 src="./images/cards-attention.png"
                 alt="руки держат книгу 101 эссе которые изменят ваше мышление"
-              />
+              >
               <h4 class="cards__title">Два вида внимания</h4>
               <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и
@@ -76,7 +76,7 @@
                 class="cards__image"
                 src="./images/cards-recall.png"
                 alt="скульптура ангела"
-              />
+              >
               <h4 class="cards__title">Recall</h4>
               <p class="cards__description">
                 Вспоминайте изученное — это позволит соединить разрозненные
@@ -88,7 +88,7 @@
                 class="cards__image"
                 src="./images/cards-interliving.png"
                 alt="монохромная фотография большого пространства"
-              />
+              >
               <h4 class="cards__title">Интерливинг</h4>
               <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогащают друг
@@ -100,7 +100,7 @@
                 class="cards__image"
                 src="./images/cards-question.png"
                 alt="монохромная фотография, вид сверху на темную фигуру в большом зале "
-              />
+              >
               <h4 class="cards__title">Вопросы</h4>
               <p class="cards__description">
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -112,7 +112,7 @@
                 class="cards__image"
                 src="./images/cards-competence.png"
                 alt="стопка книг на руке"
-              />
+              >
               <h4 class="cards__title">Иллюзия компетентности</h4>
               <p class="cards__description">
                 Повторите про себя, запишите, расскажите другу: вам только
@@ -235,7 +235,7 @@
                 class="khan__book-pic"
                 src="./images/khan-book.jpg"
                 alt="обложка книги"
-              />
+              >
               <a href="#" class="link khan__buy-link" target="_blank"
                 >Купить книгу &rarr;</a
               >
@@ -326,7 +326,7 @@
                   class="resources__logo"
                   src="./images/logo/resources-arzamas.svg"
                   alt="логотип Арзамас"
-              /></a>
+              ></a>
             </li>
             <li class="resources__link">
               <a href="#" target="_blank"
@@ -334,7 +334,7 @@
                   class="resources__logo"
                   src="./images/logo/resources-n1.svg"
                   alt="логотип N1"
-              /></a>
+              ></a>
             </li>
             <li class="resources__link">
               <a href="#" target="_blank"
@@ -342,7 +342,7 @@
                   class="resources__logo"
                   src="./images/logo/resources-strelka.svg"
                   alt="логотип Стрелка"
-              /></a>
+              ></a>
             </li>
             <li class="resources__link">
               <a href="#" target="_blank"
@@ -350,7 +350,7 @@
                   class="resources__logo"
                   src="./images/logo/resources-polka.svg"
                   alt="логотип Полка"
-              /></a>
+              ></a>
             </li>
           </ul>
         </section>
@@ -362,7 +362,7 @@
               src="./images/logo_place_footer.svg"
               alt="логотип Яндекс.Практикум"
               class="logo logo_place_footer"
-            />
+            >
             <p class="footer__author">&copy; Виктор Абанькин</p>
           </div>
           <nav class="footer__column footer__column_content_info">
@@ -381,21 +381,21 @@
                   src="./images/youtube-icon.svg"
                   alt="Ютуб иконка"
                   class="footer__social-icon"
-                />YouTube</a
+                >YouTube</a
               >
               <a href="#" target="_blank" class="footer__column-link"
                 ><img
                   src="./images/vk_color_white.svg"
                   alt="ВКонтакте иконка"
                   class="footer__social-icon"
-                />ВКонтакте</a
+                >ВКонтакте</a
               >
               <a href="#" target="_blank" class="footer__column-link"
                 ><img
                   src="./images/tiktok-icon.svg"
                   alt="ТикТок иконка"
                   class="footer__social-icon"
-                />TikTok</a
+                >TikTok</a
               >
             </div>
           </div>
