--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </header>
       <main class="content">
         <section class="description">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -53,7 +53,7 @@
                 техники применяются на примере обучения в Практикуме.
               </p>
             </div>
-          </div>
+          </article>
         </section>
         <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
@@ -150,7 +150,7 @@
           </div>
         </section>
         <section class="oakley">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли</h2>
             <p class="two-columns__main-text">
               С детства Барбаре не давалась математика. Она считала себя
@@ -162,7 +162,7 @@
               добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
               первого взгляда.
             </p>
-          </div>
+          </article>
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
