--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           alt="логотип Яндекс.Практикум"
           class="logo logo_place_header"
         />
-        <h1 class="title header__title">Научиться учиться</h1>
+        <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
@@ -125,43 +125,39 @@
           <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
           <div class="video__iframes">
-            <div class="video__iframe">
-              <iframe
-                width="515"
-                height="316"
-                src="https://www.youtube.com/embed/5MgBikgcWnY?start=930"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write;
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY?start=930"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write;
             encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
-            <div class="video__iframe">
-              <iframe
-                width="515"
-                height="316"
-                src="https://www.youtube.com/embed/arj7oStGLkU?start=137"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write;
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU?start=137"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write;
             encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
+              allowfullscreen
+            ></iframe>
           </div>
         </section>
         <section class="oakley">
           <article class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли</h2>
-            <p class="two-columns__main-text">
-              С детства Барбаре не давалась математика. Она считала себя
-              законченным гуманитарием, причём далеко не самым умным. В армии
-              она изучала русский язык, чтобы получить надбавку, да так успешно,
-              что её выдвинули в командиры. Но для продвижения по службе нужно
-              было сдавать математику. И тогда Барбара придумала свой подход к
-              точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
-              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
-              первого взгляда.
-            </p>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
+              </p>
+            </div>
           </article>
         </section>
         <section class="feynman">
@@ -219,7 +215,7 @@
         </section>
         <section class="khan">
           <div class="khan__container">
-            <h3 class="khan__author">Салман Хан</h3>
+            <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
             <p class="khan__quote">
               Страсть и новаторство Сала Хана меняют процесс обучения миллионов
@@ -228,8 +224,8 @@
               получить навыки и знания, которые приносят успех в школе, карьере
               и жизни.
             </p>
-            <h4 class="khan__quote-author">Джордж Лукас</h4>
-            <h5 class="khan__quote-author-subline">Кинорежиссер, продюсер</h5>
+            <h3 class="khan__quote-author">Джордж Лукас</h3>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img
                 class="khan__book-pic"
@@ -320,7 +316,7 @@
             Больше материалов о техниках и лайфхаках обучения
           </h3>
           <ul class="resources__logo-zone">
-            <li class="resources__link">
+            <li class="resources__link link">
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
@@ -328,7 +324,7 @@
                   alt="логотип Арзамас"
               /></a>
             </li>
-            <li class="resources__link">
+            <li class="resources__link link">
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
@@ -336,7 +332,7 @@
                   alt="логотип N1"
               /></a>
             </li>
-            <li class="resources__link">
+            <li class="resources__link link">
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
@@ -344,7 +340,7 @@
                   alt="логотип Стрелка"
               /></a>
             </li>
-            <li class="resources__link">
+            <li class="resources__link link">
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
@@ -368,29 +364,33 @@
           <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
             <ul class="footer__column-links">
-              <li><a href="#" class="footer__column-link">Главная</a></li>
-              <li><a href="#" class="footer__column-link">Концепция</a></li>
-              <li><a href="#" class="footer__column-link">Наставники</a></li>
+              <li><a href="#" class="footer__column-link link">Главная</a></li>
+              <li>
+                <a href="#" class="footer__column-link link">Концепция</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link link">Наставники</a>
+              </li>
             </ul>
           </nav>
           <div class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <div class="footer__column-links">
-              <a href="#" target="_blank" class="footer__column-link"
+              <a href="#" target="_blank" class="footer__column-link link"
                 ><img
                   src="./images/youtube-icon.svg"
                   alt="Ютуб иконка"
                   class="footer__social-icon"
                 />YouTube</a
               >
-              <a href="#" target="_blank" class="footer__column-link"
+              <a href="#" target="_blank" class="footer__column-link link"
                 ><img
                   src="./images/vk_color_white.svg"
                   alt="ВКонтакте иконка"
                   class="footer__social-icon"
                 />ВКонтакте</a
               >
-              <a href="#" target="_blank" class="footer__column-link"
+              <a href="#" target="_blank" class="footer__column-link link"
                 ><img
                   src="./images/tiktok-icon.svg"
                   alt="ТикТок иконка"
